--- a/index.html
+++ b/index.html
@@ -161,5 +161,76 @@
         <span class="font-1-m-b cor-p4">Ana Júlia</span>
       </div>
     </section>
+
+    <article class="seguros-bg">
+      <div class="seguros container">
+        <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-6">PRATA</h3>
+          <span class="font-1-xl cor-0"
+            >$ 199 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobertura estadual</li>
+          </ul>
+          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+        </div>
+
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-p1">OURO</h3>
+          <span class="font-1-xl cor-0"
+            >$ 299 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobertura nacional</li>
+            <li>Desconto em parceiros</li>
+            <li>Acesso ao Clube Bikcraft</li>
+          </ul>
+          <a class="botao" href="./orcamento.html">Inscreva-se</a>
+        </div>
+      </div>
+    </article>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <img src="img/bikcraft.svg" alt="Bikcraft" />
+        <div class="footer-contato">
+          <h2 class="font-2-l-b cor-0">Contato</h2>
+          <ul class="cor-5 font-2-m">
+            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li>
+              <a href="mailto:contatoevertonsantoss@gmail.com"
+                >contatoevertonsantoss@gmail.com</a
+              >
+            </li>
+            <li>Rua Tibúrcio de azevedo, 962 Americana</li>
+            <li>Rio Grande do Sul</li>
+          </ul>
+          <div class="footer-redes">
+            <a href="https://www.instagram.com/evertonribeiro_00/">
+              <img src="./img/redes/instagram.svg" alt="instagram" />
+            </a>
+          </div>
+        </div>
+        <div class="footer-informacoes">
+          <h3 class="font-2-l-b cor-0">informações</h3>
+          <nav>
+            <ul class="font-1-m cor-5">
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
+            </ul>
+          </nav>
+        </div>
+        <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+      </div>
+    </footer>
   </body>
 </html>
