--- a/bicicletas.html
+++ b/bicicletas.html
@@ -39,7 +39,7 @@
         <div class="titulo container">
           <p class="font-2-l-b cor-5">ESCOLHA A MELHOR PARA VOCÊ</p>
           <h1 class="font-1-xxl cor-0">
-            nossas bicicletas.<span class="cor-p1">.</span>
+            nossas bicicletas<span class="cor-p1">.</span>
           </h1>
         </div>
       </div>
