--- a/index.html
+++ b/index.html
@@ -213,8 +213,14 @@
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/">
-              <img src="./img/redes/instagram.svg" alt="instagram" />
+            <a href="https://github.com/evertonsantoos" target="_blank">
+              <img src="img/redes/github-mark-white.png" alt="github" />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
+              target="_blank"
+            >
+              <img src="img/redes/icon-linkedin.svg" alt="linkedin" />
             </a>
           </div>
         </div>
