--- a/seguros.html
+++ b/seguros.html
@@ -43,37 +43,37 @@
           </h1>
         </div>
       </div>
-        <div class="seguros container">
-          <div class="seguros-item">
-            <h3 class="font-1-xl cor-6">PRATA</h3>
-            <span class="font-1-xl cor-0"
-              >$ 199 <span class="font-1-xs cor-6">mensal</span></span
-            >
-            <ul class="font-2-m cor-0">
-              <li>Duas trocas por ano</li>
-              <li>Assistência técnica</li>
-              <li>Suporte 08h às 18h</li>
-              <li>Cobertura estadual</li>
-            </ul>
-            <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
-          </div>
-
-          <div class="seguros-item">
-            <h3 class="font-1-xl cor-p1">OURO</h3>
-            <span class="font-1-xl cor-0"
-              >$ 299 <span class="font-1-xs cor-6">mensal</span></span
-            >
-            <ul class="font-2-m cor-0">
-              <li>Cinco trocas por ano</li>
-              <li>Assistência especial</li>
-              <li>Suporte 24h</li>
-              <li>Cobertura nacional</li>
-              <li>Desconto em parceiros</li>
-              <li>Acesso ao Clube Bikcraft</li>
-            </ul>
-            <a class="botao" href="./orcamento.html">Inscreva-se</a>
-          </div>
+      <div class="seguros container">
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-6">PRATA</h3>
+          <span class="font-1-xl cor-0"
+            >$ 199 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobertura estadual</li>
+          </ul>
+          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
         </div>
+
+        <div class="seguros-item">
+          <h3 class="font-1-xl cor-p1">OURO</h3>
+          <span class="font-1-xl cor-0"
+            >$ 299 <span class="font-1-xs cor-6">mensal</span></span
+          >
+          <ul class="font-2-m cor-0">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobertura nacional</li>
+            <li>Desconto em parceiros</li>
+            <li>Acesso ao Clube Bikcraft</li>
+          </ul>
+          <a class="botao" href="./orcamento.html">Inscreva-se</a>
+        </div>
+      </div>
     </main>
 
     <article class="vantagens-bg">
@@ -81,37 +81,87 @@
         <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
         <ul>
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg" alt="" />
             <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
-            <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+            <p class="font-2-s cor-5">
+              Garantimos o reparo completo do seu motor em caso de falhas.
+              Sabemos que falhas são raras, mas estamos aqui para caso ocorra.
+            </p>
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">
+            <img src="./img/icones/rastreador.svg" alt="" />
             <h3 class="font-1-l cor-0">Rastreador</h3>
-            <p class="font-2-s cor-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
+            <p class="font-2-s cor-5">
+              Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em
+              segurança para efetuarmos a recuperação.
+            </p>
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">
+            <img src="./img/icones/carbono.svg" alt="" />
             <h3 class="font-1-l cor-0">Carbono</h3>
-            <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+            <p class="font-2-s cor-5">
+              Nossos quadros são feitos para durar para sempre. Mas caso algo
+              ocorra, ficamos felizes em reparar.
+            </p>
           </li>
           <li>
-            <img src="./img/icones/seguro.svg" alt="">
+            <img src="./img/icones/seguro.svg" alt="" />
             <h3 class="font-1-l cor-0">Segurança</h3>
-            <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
+            <p class="font-2-s cor-5">
+              Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu
+              dinheiro não será perdido em casos de roubo.
+            </p>
           </li>
           <li>
-            <img src="./img/icones/sustentavel.svg" alt="">
+            <img src="./img/icones/sustentavel.svg" alt="" />
             <h3 class="font-1-l cor-0">Sustentável</h3>
-            <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+            <p class="font-2-s cor-5">
+              Trabalhamos com a filosofia de desperdício zero. Qualquer parte
+              defeituosa é reciclada e reutilizada em outro projeto.
+            </p>
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">
+            <img src="./img/icones/velocidade.svg" alt="" />
             <h3 class="font-1-l cor-0">Rapidez</h3>
-            <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+            <p class="font-2-s cor-5">
+              A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
+              traga ela para ser reparada em uma das filiais.
+            </p>
           </li>
         </ul>
       </div>
+    </article>
+
+    <article class="perguntas container">
+      <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dtdt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+        <dd class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+    </dl>
+
     </article>
 
     <footer class="footer-bg">
