--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -17,7 +17,7 @@
     />
   </head>
 
-  <body id="termos">
+  <body id="bicicleta">
     <header class="header-bg">
       <div class="header container">
         <a href="../">
@@ -52,8 +52,7 @@
             <a class="botao" href="../orcamento.html">Comprar Agora</a>
             <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt="">Entrega em até 5 dias</span>
             <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt="">18 em estoque</span>
-           </div>
-        </div>   
+           </div>  
         <h2 class="font-1-xs cor-0">informações</h2>
         <ul class="bicicleta-informacoes">
           <li>
@@ -86,8 +85,32 @@
          <li>Marchas <span>16</span></li>
          <li>Roda <span>29</span></li>
         </ul>
+      </div> 
         </div>
     </main>
+
+    <article class="bicicletas-lista container">
+      <h2 class="font-1-xxl">
+        escolha a sua<span class="cor-p1">.</span>
+      </h2>
+
+      <ul>
+        <li>
+          <a href="./magic.html">
+            <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Magic Might</h3>
+            <span class="font-2-m cor-8">R$ 2499</span>
+          </a>
+        </li>
+        <li>
+          <a href="./nebula.html">
+            <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nebula Cosmic</h3>
+            <span class="font-2-m cor-8">R$ 3999</span>
+          </a>
+        </li>
+      </ul>
+    </article>
 
     <footer class="footer-bg">
       <div class="footer container">
