--- a/seguros.html
+++ b/seguros.html
@@ -176,7 +176,7 @@
                 >contatoevertonsantoss@gmail.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Americana</li>
+            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
