--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Termos e Condições | Bikcraft</title>
-    <meta name="description" content="Termos e condições." />
+    <title>Contato | Bikcraft</title>
+    <meta name="description" content="Contato." />
 
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -17,7 +17,7 @@
     />
   </head>
 
-  <body id="termos">
+  <body id="contato">
     <header class="header-bg">
       <div class="header container">
         <a href="./">
@@ -37,21 +37,51 @@
     <main>
       <div class="titulo-bg">
         <div class="titulo container">
-          <p class="font-2-l-b cor-5">Termos de uso</p>
-          <h1 class="font-1-xxl cor-0">termos e condições<span class="cor-p1">.</span></h1>
+          <p class="font-2-l-b cor-5">Respostas em até 24h</p>
+          <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
         </div>
       </div>
 
-      <div class="termos font-2-s cor-10 container">
-        <h2 class="font-1-l cor-11">Política de Estorno</h2>
-        <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <h2 class="font-1-l cor-11">Conta do Usuário</h2>
-        <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-        <h2 class="font-1-l cor-11">Seguro Bikcraft</h2>
-        <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      </div>
+    <div class="contato container">
+      <section class="contato-dados" aria-label="Endereço">
+        <h2 class="font-1-m cor-0">Loja Online</h2>
+        <div class="contato-endereco font-2-s cor-4">
+          <p>Rua Tibúrcio de azevedo, 962</p>
+          <p>Alvorada - RS</p>
+        </div>
+        <address class="contato-meios font-2-s cor-4">
+          <a href="mailto:contatoevertonsantoss@gmail.com">contatoevertonsantoss@gmail.com</a>
+          <a href="mailto:assistencia@bikcraft.com">mailto:assistencia@bikcraft.com</a>
+          <a href="tel:51 99150-3016">51 99150-3016</a>
+        </address>
+        <div class="contato-redes">
+          <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/">
+            <img src="img/redes/icon-linkedin.svg" alt="#" />
+          </a>
+        </div>
+      </section>
+      <section class="contato-formulario" aria-label="formulario">
+       <form class="form" action=".contato.html">
+        <div>
+          <label for="nome">Nome</label>
+          <input type="nome" id="nome" name="nome" placeholder="Seu nome ">
+        </div>
+        <div>
+          <label for="telefone">Telefone</label>
+          <input type="telefone" id="telefone" name="telefone" placeholder="(51) 9999-9999">
+        </div>
+        <div>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="assistencia@bikcraft.com">
+        </div>
+        <div>
+          <label for="mensagem">Mensagem</label>
+          <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
+        </div>
+        <button class="botao">Enviar Mensagem</button>
+       </form>
+      </section>
+    </div>
     </main>
 
     <footer class="footer-bg">
@@ -66,7 +96,7 @@
                 >contatoevertonsantoss@gmail.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
+            <li>Rua Tibúrcio de azevedo, 962 Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
