--- a/contato.html
+++ b/contato.html
@@ -60,25 +60,25 @@
           </a>
         </div>
       </section>
-      <section class="contato-formulario" aria-label="formulario">
-       <form class="form" action=".contato.html">
+      <section class="contato-formulario" aria-label="Formulário">
+       <form class="form" action="./contato.html">
         <div>
           <label for="nome">Nome</label>
-          <input type="nome" id="nome" name="nome" placeholder="Seu nome ">
+          <input type="text" id="nome" name="nome" placeholder="Seu nome">
         </div>
         <div>
           <label for="telefone">Telefone</label>
-          <input type="telefone" id="telefone" name="telefone" placeholder="(51) 9999-9999">
+          <input type="text" id="telefone" name="telefone" placeholder="(51) 9999-9999">
         </div>
-        <div>
+        <div class="col-2">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" placeholder="assistencia@bikcraft.com">
         </div>
-        <div>
+        <div class="col-2">
           <label for="mensagem">Mensagem</label>
           <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
         </div>
-        <button class="botao">Enviar Mensagem</button>
+        <button class="botao col-2">Enviar Mensagem</button>
        </form>
       </section>
     </div>
