--- a/contato.html
+++ b/contato.html
@@ -38,51 +38,107 @@
       <div class="titulo-bg">
         <div class="titulo container">
           <p class="font-2-l-b cor-5">Respostas em até 24h</p>
-          <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
+          <h1 class="font-1-xxl cor-0">
+            nosso contato<span class="cor-p1">.</span>
+          </h1>
         </div>
       </div>
 
-    <div class="contato container">
-      <section class="contato-dados" aria-label="Endereço">
-        <h2 class="font-1-m cor-0">Loja Online</h2>
-        <div class="contato-endereco font-2-s cor-4">
-          <p>Rua Tibúrcio de azevedo, 962</p>
-          <p>Alvorada - RS</p>
-        </div>
-        <address class="contato-meios font-2-s cor-4">
-          <a href="mailto:contatoevertonsantoss@gmail.com">contatoevertonsantoss@gmail.com</a>
-          <a href="mailto:assistencia@bikcraft.com">mailto:assistencia@bikcraft.com</a>
-          <a href="tel:51 99150-3016">51 99150-3016</a>
-        </address>
-        <div class="contato-redes">
-          <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/">
-            <img src="img/redes/icon-linkedin.svg" alt="#" />
-          </a>
-        </div>
-      </section>
-      <section class="contato-formulario" aria-label="Formulário">
-       <form class="form" action="./contato.html">
-        <div>
-          <label for="nome">Nome</label>
-          <input type="text" id="nome" name="nome" placeholder="Seu nome">
-        </div>
-        <div>
-          <label for="telefone">Telefone</label>
-          <input type="text" id="telefone" name="telefone" placeholder="(51) 9999-9999">
-        </div>
-        <div class="col-2">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="assistencia@bikcraft.com">
-        </div>
-        <div class="col-2">
-          <label for="mensagem">Mensagem</label>
-          <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
-        </div>
-        <button class="botao col-2">Enviar Mensagem</button>
-       </form>
-      </section>
-    </div>
+      <div class="contato container">
+        <section class="contato-dados" aria-label="Endereço">
+          <h2 class="font-1-m cor-0">Loja Online</h2>
+          <div class="contato-endereco font-2-s cor-4">
+            <p>Rua Tibúrcio de azevedo, 962</p>
+            <p>Alvorada - RS</p>
+          </div>
+          <address class="contato-meios font-2-s cor-4">
+            <a href="mailto:contatoevertonsantoss@gmail.com"
+              >contatoevertonsantoss@gmail.com</a
+            >
+            <a href="mailto:assistencia@bikcraft.com"
+              >mailto:assistencia@bikcraft.com</a
+            >
+            <a href="tel:51 99150-3016">51 99150-3016</a>
+          </address>
+          <div class="contato-redes">
+            <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/">
+              <img src="img/redes/icon-linkedin.svg" alt="#" />
+            </a>
+          </div>
+        </section>
+        <section class="contato-formulario" aria-label="Formulário">
+          <form class="form" action="./contato.html">
+            <div>
+              <label for="nome">Nome</label>
+              <input type="text" id="nome" name="nome" placeholder="Seu nome" />
+            </div>
+            <div>
+              <label for="telefone">Telefone</label>
+              <input
+                type="text"
+                id="telefone"
+                name="telefone"
+                placeholder="(51) 9999-9999"
+              />
+            </div>
+            <div class="col-2">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="assistencia@bikcraft.com"
+              />
+            </div>
+            <div class="col-2">
+              <label for="mensagem">Mensagem</label>
+              <textarea
+                rows="5"
+                id="mensagem"
+                name="mensagem"
+                placeholder="O que você precisa?"
+              ></textarea>
+            </div>
+            <button class="botao col-2">Enviar Mensagem</button>
+          </form>
+        </section>
+      </div>
     </main>
+
+    <article class="lojas container">
+      <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+      <div class="lojas-item">
+        <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">Rio de Janeiro</h3>
+          <div class="lojas-dados font-2-s cor-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>Rio de Janeiro - RJ</p>
+          </div>
+          <div class="lojas-dados font-2-s cor-8">
+            <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+            <a href="tel:+552199999999">+55 21 9999-9999</a>
+          </div>
+          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+        </div>
+      </div>
+  
+      <div class="lojas-item">
+        <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">São Paulo</h3>
+          <div class="lojas-dados font-2-s cor-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>São Paulo - SP</p>
+          </div>
+          <div class="lojas-dados font-2-s cor-8">
+            <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+            <a href="tel:+551199999999">+55 11 9999-9999</a>
+          </div>
+          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+        </div>
+      </div>
+    </article>
 
     <footer class="footer-bg">
       <div class="footer container">
