--- a/contato.html
+++ b/contato.html
@@ -56,12 +56,12 @@
               >contatoevertonsantoss@gmail.com</a
             >
             <a href="mailto:assistencia@bikcraft.com"
-              >mailto:assistencia@bikcraft.com</a
+              >assistencia@bikcraft.com</a
             >
             <a href="tel:51 99150-3016">51 99150-3016</a>
           </address>
           <div class="contato-redes">
-            <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/">
+            <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/" target="_blank">
               <img src="img/redes/icon-linkedin.svg" alt="#" />
             </a>
           </div>
@@ -108,7 +108,10 @@
     <article class="lojas container">
       <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
       <div class="lojas-item">
-        <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+        <img
+          src="./img/lojas/rj.jpg"
+          alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ"
+        />
         <div class="lojas-conteudo">
           <h3 class="font-1-xl">Rio de Janeiro</h3>
           <div class="lojas-dados font-2-s cor-8">
@@ -119,12 +122,17 @@
             <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
             <a href="tel:+552199999999">+55 21 9999-9999</a>
           </div>
-          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+          <p class="lojas-tempo font-1-s">
+            <img src="./img/icones/horario.svg" alt="" />08-18h de seg à dom
+          </p>
         </div>
       </div>
-  
+
       <div class="lojas-item">
-        <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+        <img
+          src="./img/lojas/sp.jpg"
+          alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP"
+        />
         <div class="lojas-conteudo">
           <h3 class="font-1-xl">São Paulo</h3>
           <div class="lojas-dados font-2-s cor-8">
@@ -135,10 +143,12 @@
             <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
             <a href="tel:+551199999999">+55 11 9999-9999</a>
           </div>
-          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+          <p class="lojas-tempo font-1-s">
+            <img src="./img/icones/horario.svg" alt="" />08-18h de seg à dom
+          </p>
         </div>
       </div>
-    </article> 
+    </article>
 
     <footer class="footer-bg">
       <div class="footer container">
