--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
-            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li><a href="tel:+55 21 9999-9999">+55 51 9999-9999</a></li>
             <li>
               <a href="mailto:contatoevertonsantoss@gmail.com"
                 >contatoevertonsantoss@gmail.com</a
