--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
 
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +25,12 @@
     <header class="header-bg">
       <div class="header container">
         <a href="./">
-          <img src="./img/bikcraft.svg" alt="Bikcraft" />
+          <img
+            src="./img/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+          />
         </a>
 
         <nav aria-label="primaria">
@@ -49,12 +55,18 @@
           </p>
           <a class="botao" href="./bicicletas.html">Escolha a sua</a>
         </div>
-        <div>
+        <picture>
+          <source
+            media="(max-width: 800px)"
+            srcset="./img/bicicletas/nimbus.jpg"
+          />
           <img
             src="./img/fotos/introducao.jpg"
+            width="1280"
+            height="1600"
             alt="Bicicleta elétrica preta."
           />
-        </div>
+        </picture>
       </div>
     </main>
 
@@ -66,21 +78,36 @@
       <ul>
         <li>
           <a href="./bicicletas/magic.html">
-            <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/magic-home.jpg"
+              alt="Bicicleta preta"
+              width="920"
+              height="1040"
+            />
             <h3 class="font-1-xl">Magic Might</h3>
             <span class="font-2-m cor-8">R$ 2499</span>
           </a>
         </li>
         <li>
           <a href="./bicicletas/nimbus.html">
-            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/nimbus-home.jpg"
+              alt="Bicicleta preta"
+              width="920"
+              height="1040"
+            />
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m cor-8">R$ 4999</span>
           </a>
         </li>
         <li>
           <a href="./bicicletas/nebula.html">
-            <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+            <img
+              src="./img/bicicletas/nebula-home.jpg"
+              alt="Bicicleta preta"
+              width="920"
+              height="1040"
+            />
             <h3 class="font-1-xl">Nebula Cosmic</h3>
             <span class="font-2-m cor-8">R$ 3999</span>
           </a>
@@ -106,7 +133,12 @@
           <a class="link" href="./bicicletas.html">Escolha um modelo</a>
           <div class="tecnologia-vantagens">
             <div>
-              <img src="./img/icones/eletrica.svg" alt="" />
+              <img
+                src="./img/icones/eletrica.svg"
+                width="24"
+                height="24"
+                alt=""
+              />
               <h3 class="font-1-m cor-0">Motor Elétrico</h3>
               <p class="font-2-s cor-5">
                 Toda Bikcraft é equipada com um motor elétrico que possui
@@ -125,7 +157,12 @@
           </div>
         </div>
         <div class="tecnologia-imagem">
-          <img src="./img/fotos/tecnologia.jpg" alt="" />
+          <img
+            src="./img/fotos/tecnologia.jpg"
+            width="1200"
+            height="1920"
+            alt=""
+          />
         </div>
       </div>
     </article>
@@ -135,20 +172,81 @@
         nossos parceiros<span class="cor-p1">.</span>
       </h2>
       <ul>
-        <li><img src="img/parceiros/caravan.svg" alt="caravan" /></li>
-        <li><img src="img/parceiros/ranek.svg" alt="ranekd" /></li>
-        <li><img src="img/parceiros/handel.svg" alt="handel" /></li>
-        <li><img src="img/parceiros/dogs.svg" alt="dogs" /></li>
-        <li><img src="img/parceiros/lescone.svg" alt="lescone" /></li>
-        <li><img src="img/parceiros/flexblog.svg" alt="flexblog" /></li>
-        <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast" /></li>
-        <li><img src="img/parceiros/surfbot.svg" alt="surfbot" /></li>
+        <li>
+          <img
+            src="./img/parceiros/caravan.svg"
+            alt="Caravan"
+            width="140"
+            height="38"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/ranek.svg"
+            alt="Ranek"
+            width="149"
+            height="36"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/handel.svg"
+            alt="Handel"
+            width="140"
+            height="50"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/dogs.svg"
+            alt="Dogs"
+            width="152"
+            height="39"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/lescone.svg"
+            alt="LeScone"
+            width="208"
+            height="41"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/flexblog.svg"
+            alt="FlexBlog"
+            width="165"
+            height="38"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/wildbeast.svg"
+            alt="Wildbeast"
+            width="196"
+            height="34"
+          />
+        </li>
+        <li>
+          <img
+            src="./img/parceiros/surfbot.svg"
+            alt="Surfbot"
+            width="200"
+            height="49"
+          />
+        </li>
       </ul>
     </section>
 
     <section class="depoimento" aria-label="Depoimento">
       <div>
-        <img src="img/fotos/depoimento.jpg" alt="img-ilustrativa" />
+        <img
+          src="img/fotos/depoimento.jpg"
+          alt="img-ilustrativa"
+          width="1560"
+          height="1360"
+        />
       </div>
       <div class="depoimento-conteudo">
         <blockquote class="font-1-xl cor-p5">
@@ -199,7 +297,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="img/bikcraft.svg" alt="Bikcraft" />
+        <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
@@ -214,13 +312,23 @@
           </ul>
           <div class="footer-redes">
             <a href="https://github.com/evertonsantoos" target="_blank">
-              <img src="img/redes/github-mark-white.png" alt="github" />
+              <img
+                src="img/redes/github-mark-white.png"
+                width="32"
+                height="32"
+                alt="github"
+              />
             </a>
             <a
               href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
               target="_blank"
             >
-              <img src="img/redes/icon-linkedin.svg" alt="linkedin" />
+              <img
+                src="img/redes/icon-linkedin.svg"
+                width="32"
+                height="32"
+                alt="linkedin"
+              />
             </a>
           </div>
         </div>
