--- a/seguros.html
+++ b/seguros.html
@@ -7,7 +7,7 @@
     <title>Seguros | Bikcraft</title>
     <meta name="description" content="Termos e condições." />
 
-    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="preload" href="./css/style.css" as="style" />
     <link rel="stylesheet" href="./css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="seguros container">
-        <div class="seguros-item">
+        <div class="seguros-item fadeInLeft" data-anime="200">
           <h3 class="font-1-xl cor-6">PRATA</h3>
           <span class="font-1-xl cor-0"
             >$ 199 <span class="font-1-xs cor-6">mensal</span></span
@@ -56,10 +56,14 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
+          <a
+            class="botao secundario"
+            href="./orcamento.html?tipo=seguro&produto=prata"
+            >Inscreva-se</a
+          >
         </div>
 
-        <div class="seguros-item">
+        <div class="seguros-item fadeInRight" data-anime="400">
           <h3 class="font-1-xl cor-p1">OURO</h3>
           <span class="font-1-xl cor-0"
             >$ 299 <span class="font-1-xs cor-6">mensal</span></span
@@ -72,7 +76,9 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
+          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro"
+            >Inscreva-se</a
+          >
         </div>
       </div>
     </main>
@@ -134,35 +140,108 @@
     </article>
 
     <article class="perguntas container">
-      <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+      <h2 class="font-1-xxl">
+        perguntas frequentes<span class="cor-p1">.</span>
+      </h2>
 
-    <dl>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta1" aria-expanded="true">Qual forma de pagamento vocês aceitam?</button></dt>
-        <dd id="pergunta1" class="font-2-s cor-9 ativa">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
-        <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
-        <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
-        <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
-        <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-      <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ao ano?</button></dt>
-        <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
-      </div>
-    </dl>
-
+      <dl>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta1"
+              aria-expanded="true"
+            >
+              Qual forma de pagamento vocês aceitam?
+            </button>
+          </dt>
+          <dd id="pergunta1" class="font-2-s cor-9 ativa">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta2"
+              aria-expanded="false"
+            >
+              Como posso entrar em contato?
+            </button>
+          </dt>
+          <dd id="pergunta2" class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta3"
+              aria-expanded="false"
+            >
+              Vocês possuem algum desconto?
+            </button>
+          </dt>
+          <dd id="pergunta3" class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta4"
+              aria-expanded="false"
+            >
+              Qual a garantia que possuo?
+            </button>
+          </dt>
+          <dd id="pergunta4" class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta5"
+              aria-expanded="false"
+            >
+              Posso parcelar no boleto?
+            </button>
+          </dt>
+          <dd id="pergunta5" class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta6"
+              aria-expanded="false"
+            >
+              Quantas trocas posso fazer ao ano?
+            </button>
+          </dt>
+          <dd id="pergunta6" class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+            pagamentos à vista também aceitarmos PIX e Boleto através do
+            PagSeguro.
+          </dd>
+        </div>
+      </dl>
     </article>
 
     <footer class="footer-bg">
@@ -202,6 +281,8 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+
+    <script src="./js/plugins/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
