--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -7,8 +7,9 @@
     <title>Magic | Bikcraft</title>
     <meta name="description" content="Magic." />
 
-    <link rel="stylesheet" href="../css/style.css" />
 
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
