--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <article class="seguros-bg">
       <div class="seguros container">
         <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
-        <div class="seguros-item">
+        <div class="seguros-item fadeInLeft" data-anime="200">
           <h3 class="font-1-xl cor-6">PRATA</h3>
           <span class="font-1-xl cor-0"
             >$ 199 <span class="font-1-xs cor-6">mensal</span></span
@@ -282,7 +282,7 @@
           <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
         </div>
 
-        <div class="seguros-item">
+        <div class="seguros-item fadeInRight" data-anime="400">
           <h3 class="font-1-xl cor-p1">OURO</h3>
           <span class="font-1-xl cor-0"
             >$ 299 <span class="font-1-xs cor-6">mensal</span></span
