--- a/seguros.html
+++ b/seguros.html
@@ -264,7 +264,7 @@
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/">
+            <a href="https://www.instagram.com/evertonribeiro_00/" target="_blank">
               <img src="./img/redes/instagram.svg" alt="instagram" />
             </a>
           </div>
