--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
           <ul class="cor-5 font-2-m">
             <li><a href="tel:+55 21 9999-9999">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
+              <a href="mailto:contato@bikcraft.com"
+                >contato@bikcraft.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
@@ -338,7 +338,7 @@
           </div>
         </div>
         <div class="footer-informacoes">
-          <h3 class="font-2-l-b cor-0">informações</h3>
+          <h3 class="font-2-l-b cor-0">Informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
               <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -348,9 +348,7 @@
             </ul>
           </nav>
         </div>
-        <p class="footer-copy font-2-m cor-6">
-          Bikcraft © Alguns direitos reservados.
-        </p>
+        <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
       </div>
     </footer>
 
