--- a/orcamento.html
+++ b/orcamento.html
@@ -147,7 +147,7 @@
           </div>
           <div class="col-2">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" />
+            <input type="email" id="email" name="email" required />
           </div>
           <h2 class="font-1-xs cor-9 col-2">entrega</h2>
           <div>
@@ -187,11 +187,11 @@
           <ul class="font-2-m cor-5">
             <li><a href="tel:+552199999999">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
+              <a href="mailto:contato@bikcraft.com"
+                >contato@bikcraft.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
