--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,8 +7,8 @@
     <title>Bicicletas | Bikcraft</title>
     <meta name="description" content="bicicletas." />
 
-     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-    <link rel="preload" href="./css/style.min.css" as="style">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,8 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
- <script>
-    document.documentElement.classList.add('js');
+    <script>
+      document.documentElement.classList.add("js");
     </script>
   </head>
 
@@ -132,18 +132,32 @@
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
-            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li><a href="tel:+5551991503016">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
-              >
+              <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/" target="_blank">
-              <img src="./img/redes/instagram.svg" alt="instagram" />
+            <a
+              href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
+              target="_blank"
+            >
+              <img
+                src="img/redes/icon-linkedin.svg"
+                width="32"
+                height="32"
+                alt="linkedin"
+              />
+            </a>
+            <a href="https://github.com/evertonsantoos" target="_blank">
+              <img
+                src="img/redes/github-mark-white.png"
+                width="32"
+                height="32"
+                alt="github"
+              />
             </a>
           </div>
         </div>
@@ -163,6 +177,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
