--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -135,13 +135,13 @@
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
-            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li><a href="tel:+5551991503016">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
+              <a href="mailto:contato@bikcraft.com"
+                >contato@bikcraft.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Americana</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
