--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,8 @@
     <title>Contato | Bikcraft</title>
     <meta name="description" content="Contato." />
 
-     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-    <link rel="preload" href="./css/style.min.css" as="style">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
     <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,8 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
- <script>
-    document.documentElement.classList.add('js');
+    <script>
+      document.documentElement.classList.add("js");
     </script>
   </head>
 
@@ -53,20 +53,23 @@
         <section class="contato-dados" aria-label="Endereço">
           <h2 class="font-1-m cor-0">Loja Online</h2>
           <div class="contato-endereco font-2-s cor-4">
-            <p>Rua Tibúrcio de azevedo, 962</p>
+            <p>Rua Ali Perto, 42 - Americana</p>
             <p>Alvorada - RS</p>
           </div>
           <address class="contato-meios font-2-s cor-4">
-            <a href="mailto:contatoevertonsantoss@gmail.com"
-              >contatoevertonsantoss@gmail.com</a
+            <a href="mailto:contato@bikcraft.com"
+              >contato@bikcraft.com</a
             >
             <a href="mailto:assistencia@bikcraft.com"
               >assistencia@bikcraft.com</a
             >
-            <a href="tel:51 99150-3016">51 99150-3016</a>
+            <a href="tel:+55 51 9999-9999">+55 51 9999-9999</a>
           </address>
           <div class="contato-redes">
-            <a href="https://www.linkedin.com/in/éverton-santos-1993a726a/" target="_blank">
+            <a
+              href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
+              target="_blank"
+            >
               <img src="img/redes/icon-linkedin.svg" alt="#" />
             </a>
           </div>
@@ -93,6 +96,7 @@
                 id="email"
                 name="email"
                 placeholder="assistencia@bikcraft.com"
+                required
               />
             </div>
             <div class="col-2">
@@ -161,18 +165,34 @@
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
-            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li><a href="tel:+5551991503016">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
+              <a href="mailto:contato@bikcraft.com"
+                >contato@bikcraft.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Americana</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/" target="_blank">
-              <img src="./img/redes/instagram.svg" alt="instagram" />
+            <a href="https://github.com/evertonsantoos" target="_blank">
+              <img
+                src="img/redes/github-mark-white.png"
+                width="32"
+                height="32"
+                alt="github"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
+              target="_blank"
+            >
+              <img
+                src="img/redes/icon-linkedin.svg"
+                width="32"
+                height="32"
+                alt="linkedin"
+              />
             </a>
           </div>
         </div>
@@ -192,6 +212,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
