--- a/seguros.html
+++ b/seguros.html
@@ -254,18 +254,34 @@
         <div class="footer-contato">
           <h2 class="font-2-l-b cor-0">Contato</h2>
           <ul class="cor-5 font-2-m">
-            <li><a href="tel:+5551991503016">51 99150-3016</a></li>
+            <li><a href="tel:+5551991503016">+55 51 9999-9999</a></li>
             <li>
-              <a href="mailto:contatoevertonsantoss@gmail.com"
-                >contatoevertonsantoss@gmail.com</a
+              <a href="mailto:contato@bikcraft.com"
+                >contato@bikcraft.com</a
               >
             </li>
-            <li>Rua Tibúrcio de azevedo, 962 Alvorada</li>
+            <li>Rua Ali Perto, 42 - Americana</li>
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/" target="_blank">
-              <img src="./img/redes/instagram.svg" alt="instagram" />
+            <a href="https://github.com/evertonsantoos" target="_blank">
+              <img
+                src="img/redes/github-mark-white.png"
+                width="32"
+                height="32"
+                alt="github"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/éverton-santos-1993a726a/"
+              target="_blank"
+            >
+              <img
+                src="img/redes/icon-linkedin.svg"
+                width="32"
+                height="32"
+                alt="linkedin"
+              />
             </a>
           </div>
         </div>
